--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: 'Alex's Blog'
-subheading: '123'
+heading: 'Your awesome heading'
+subheading: 'Your awesome subheading'
 banner: 'default'
 ---
 
