--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,6 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
+heading: "Alex's Blog"
 subheading: '见贤思齐焉，见不贤而内自省也。'
 banner: 'default'
 ---
