--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
 heading: "Alex's Blog"
-subheading: '见贤思齐焉，见不贤而内自省也。'
+subheading: "见贤思齐焉,见不贤而内自省也."
 banner: 'default'
 ---
 
