--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: "见贤思齐焉"
-subheading: "见不贤而内自省也"
+heading: 'heading'
+subheading: 'subheading'
 banner: 'default'
 ---
 
