--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
       让流浪的足迹在荒漠里写下永久的回忆
     </p>
     <p>
-      Lorem ipsum ðolor sit amēt, per hǣrum soleǽt convenire et. Diċo dolōrum qualisque meī ēt, ius æƿ modus facilisi dīspūtaÞioƿī. Ei puteƿÞ vērear quo, ne sit stet sǣpientēm ċoncepÞam. Sed prōbo virtute voluptariā ūt. Ullūm promptǽ ið mel, dīæm neglegenÞur per no, eī nullam possim mediōcrēm pri.
+      轻飘飘的旧时光，就这么溜走；转头回去看看时，已匆匆数年。
     </p>
   </div>
 </div>
