--- a/assets/css/about.sass
+++ b/assets/css/about.sass
@@ -7,33 +7,10 @@
   -o-transition: $args
   transition: $args
 
-@keyframes word-waiting
-  from 
-    border-bottom: 3px solid black
-  to 
-    border-bottom: none
-
 .user-pic
   img
     width: 100px
     height: auto
 
-.user-content
-  margin-top: 30px
-
-.typing-text
-  font-size: 1.5em
-
-.word-typing
-  display: inline-block
-  width: .5em
-  font-size: 1.5em
-  border-bottom: 3px solid black
-  vertical-align: text-bottom
-
-.word-waiting
-  display: inline-block
-  width: .5em
-  font-size: 1.5em
-  vertical-align: text-bottom
-  animation: word-waiting 1s linear infinite
+.hidden
+  display: none
