--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,12 @@
 <div class="col s12 tag-div">
   <div class="user-pic center-align">
-    <a href="{{site.github_profile}}" target="_blank"><img class="circle hoverable z-depth-1" src="{{site.baseurl}}/assets/res/user.png"></a>
+    <a href="{{site.github_profile}}" target="_blank"><img class="circle hoverable z-depth-1" src="{{site.baseurl}}/assets/img/user.png"></a>
   </div>
+
+  <div class="user-intro center-align">
+    <i>{{site.nick_name}}（{{site.english_name}}）</i>
+  </div>
+
   <div class="user-intro center-align">
     <h4 class="hidden">I am a <span id="js-rotating">So Simple, Very Doge, Much Wow, Such Cool</span> Bobcat</h4>
   </div>
@@ -13,28 +18,4 @@
       轻飘飘的旧时光，就这么溜走；转头回去看看时，已匆匆数年。
     </p>
   </div>
-</div>
-
-
-<div class="col s12 tag-div">
-  <div class="user-pic center-align">
-      <a href="{{site.github_profile}}" target="_blank">
-          <img class="circle hoverable z-depth-1" src="/assets/img/user.png">
-      </a>
-  </div>
-  <div class="user-intro center-align">
-      <i>{{site.nick_name}}（{{site.english_name}}）</i>
-  </div>
-  <div class="user-intro center-align">
-      <h4>一个<span class="typing-text hidden">勤奋, 上进, 求索, 创新</span>的爱码士</h4>
-  </div>
-  <div class="user-content center-align">
-      <p>
-          心中本没有路，用双手敲写康庄大道。
-      </p>
-      <p>
-          知之甚少，学之甚多，生命不休，求索不止。
-      </p>
-  </div>
-  <br>
 </div>
