--- a/_includes/mathjax_support.html
+++ b/_includes/mathjax_support.html
@@ -13,6 +13,11 @@
       displayMath: [ ['$$','$$'] ],
       processEscapes: true,
     }
+    MathZoom: {
+      styles: {
+        "#MathJax_Zoom":{overflow:"auto ! important"}
+      }
+    }
   });
 </script>
 <script type="text/javascript"
