--- a/_includes/head.html
+++ b/_includes/head.html
@@ -74,11 +74,22 @@
 <!--以下解析LaTeX-->
       
 <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({tex2jax: {
+    MathJax.Hub.Config(
+        {tex2jax: {
            inlineMath: [ ['$','$'], ["\\(","\\)"] ],
            processEscapes: true
-         }
-       });
+        }
+        MathZoom: {
+            styles: {
+              "#MathJax_Zoom":{overflow:"auto !important"}
+            }
+        }
+        "HTML-CSS": { linebreaks: { automatic: true } },
+4          SVG: { linebreaks: { automatic: true } }
+        });
+    MathJax.Hub.Queue(function () {
+        $('.MathJax_Display').wrap("<div class='official'></div>");
+    });
   </script>
   
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
