--- a/_includes/head.html
+++ b/_includes/head.html
@@ -69,4 +69,24 @@
     <!-- Google AdSense -->
     <script data-ad-client="ca-pub-6487568398225121" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+        <script type="text/x-mathjax-config">
+            MathJax.Hub.Config({
+              tex2jax: {
+                skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code'],
+                inlineMath: [['$','$'], ['\\(','\\)']],
+                processEscapes: true
+              },
+              TeX: {
+                equationNumbers: {
+                  autoNumber: "AMS"
+                }
+              }
+            });
+          </script>
+          
+          <script type="text/javascript" async
+            src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_CHTML">
+          </script>
+
 </head>
